# mgr

./: .gitignore  .gitmodules  README.md  Vagrantfile  nikss-cmd.sh  nikss_headers_fix.sh  p4_router.c  send-packet.py
agent/: meson.build
agent/inc/: netlink_handlers.h  nikss_helper.h  offload.h  p4_handlers.h
agent/src/: main.c  netlink_handlers.c  nikss_helper.c  offload.c  p4_handlers.c
router/: deparser.p4  egress.p4  headers.p4  ingress.p4  parser.p4  run.py  top.p4
router/lib/: nikss_mn.py
